# credit-card-churn

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
docs/: R2_SETUP_GUIDE.md  env_template.txt
executed-notebooks/: 01_split_data.html  02_scoping.html  03_eda.html  04_model_development__cost_sensitive_learning__linear_models.html  04_model_development_logisticregression.html  05_model_development__cost_sensitive_learning__tree_based_models.html  06_get_at_risk_and_max_roi_customers_from_business_metrics.html  06_get_customers_from_businesS_metrics.html  07_all_customers_get_at_risk_and_max_roi_customers_from_business_metrics.html
notebooks/: 01_split_data.ipynb  02_scoping.ipynb  03_eda.ipynb  04_advanced_modeling.ipynb  04_model_development__cost_sensitive_learning__linear_models.ipynb  04_model_development_logisticregression.ipynb  05_model_development__cost_sensitive_learning__tree_based_models.ipynb  06_.ipynb  06_get_at_risk_and_max_roi_customers_from_business_metrics.ipynb  06_get_customers_from_business_metrics.ipynb  07_all_customers_get_at_risk_and_max_roi_customers_from_business_metrics.ipynb  08_production_ml_pipeline.ipynb  BankChurners-2.ipynb
references/: 00_title.md  01_problem_understanding.md  01_proposal.md  02_costs.md  03_goals.md  04_actions.md  05_data.md  06_analysis.md  07_deliverables.md
scripts/: demo_pipeline.py  test_r2_connection.py
src/: __init__.py
src/business/: __init__.py  clv_calculator.py  cost_analysis.py  metrics.py
src/cc_churn/: costs.py  evaluation.py  scoring.py  tuning.py  visualization.py
src/evaluation/: __init__.py  metrics.py  model_validator.py
src/r2/: io_utils.py
src/utils/: __init__.py  data_preprocessing.py  feature_engineering.py
